# wafer-view

./: .coveragerc  .gitignore  :q  CONTRIBUTING.md  README.md  README.rst  pylintrc  pyproject.toml  requirements.txt  requirements_test.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ISSUE_TEMPLATE.md  lint.yml  publish.yml  test.yml
tests/: test_wafermap.py  test_wafermap_data.py
tests/xml/SEMI_G85/: SEMI_G85_1101_ALL.xml  SEMI_G85_1101_MIN.xml
waferview/: __init__.py  __main__.py  wafermap.py
waferview/gui/: __init__.py  constants.py  gui.py  semimap.py
